# HsBaGA

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
CMake/: config.cmake.in
GA/: HsBaGA.hpp
Samples/: CMakeLists.txt  SimpleUInt.cpp
